make the site responsive

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <li><a href="#" >Contact</a></li>
                 <li><a href="#" >Projects</a></li>
             </ul>
+            <div class="mobile-menu">
+                <img src="/static/icons/menu-rounded-50.png" alt="">
+            </div>
         </nav>
     </header>
     <section class="hero">
