--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
                 <li><a href="#" >Contact</a></li>
                 <li><a href="#" >Projects</a></li>
             </ul>
-            <div class="mobile-menu">
-                <img src="/static/icons/menu-rounded-50.png" alt="">
-            </div>
+            <label for="menu_check" class="menu_btn">
+                <input type="checkbox" id="menu_check" />
+                <div class="menu_hamburger"></div>
+                <!-- menu items -->
+                <ul class="menu_items">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </label>
         </nav>
     </header>
     <section class="hero">
