added link to submit form

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <section class="contact">
         <h2 class="title">Contact me!</h2>
         <div class="contact-form">
-            <form action="#">
-                <input class="email-form" type="email">
-                <button class="button-submit" type="submit">Submit</button>
+            <form id="form" action="https://dajuma.github.io/email-submit">
+                <input name="email" id="email" type="email" placeholder="Enter your email address" required="">
+                <input id="submit" type="submit" value="submit" class="btn">
               </form>
         </div>
     </section>
